aiops/bifrost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bifrost
  namespace: aiops
spec:
  selector:
    app: bifrost
  ports:
    - name: http
      port: 8080
      targetPort: http
